# yast-apparmor

./: .cvsignore  .gitignore  .travis.yml  MAINTAINER  Makefile  README  README.md  RPMNAME  configure.in.in  yast2-apparmor.changes  yast2-apparmor.spec  yast2-apparmor.spec.in  yast2-module.suse.spec.example
.github/workflows/: ci.yml
config/: Makefile.am  reports.crontab
package/: yast2-apparmor.changes  yast2-apparmor.spec
src/: Makefile.am
src/agents/: Makefile.am  ag_aa_config  ag_aa_config.pm  ag_apparmor  ag_apparmor.pm  ag_apparmor_profiles.pm  ag_complain  ag_genprof  ag_genprof.pm  ag_logparse  ag_logparse.pm  ag_logprof  ag_reports_confined  ag_reports_ess  ag_reports_ess.pm  ag_reports_new  ag_reports_parse  ag_reports_sched  ag_reports_sched.pm  ag_sd_config  ag_sd_config.pm  ag_subdomain  ag_subdomain.pm  ag_subdomain_profiles
src/apparmor/: reports.conf
src/clients/: AA_AddProfile.rb  AA_AddProfile.ycp  AA_DeleteProfile.rb  AA_DeleteProfile.ycp  AA_EditProfile.rb  AA_EditProfile.ycp  AA_Report.rb  AA_Report.ycp  GenProf.rb  GenProf.ycp  LogProf.rb  LogProf.ycp  Makefile.am  SD_AddProfile.ycp  SD_DeleteProfile.ycp  SD_EditProfile.ycp  SD_Report.ycp  aa-genprof.rb  aa-logprof.rb  aa-settings.rb  apparmor-settings.rb  apparmor-settings.ycp  apparmor.rb  apparmor.ycp  apparmor_no_impl.rb  apparmor_no_impl.ycp  subdomain.ycp
src/desktop/: Makefile.am  SD_Reports.desktop  SD_add_profile.desktop  SD_control_panel.desktop  SD_delete_profile.desktop  SD_edit_profile.desktop  SD_genprof.desktop  SD_logprof.desktop  apparmor.desktop  org.opensuse.yast.Apparmor.desktop  yast2-apparmor.desktop
src/desktop/groups/: Makefile.am  apparmor.desktop
src/include/: Makefile.am
src/include/apparmor/: Makefile.am  aa-config.rb  aa-config.ycp  apparmor_packages.rb  apparmor_packages.ycp  apparmor_profile_check.rb  apparmor_profile_check.ycp  apparmor_ycp_utils.rb  apparmor_ycp_utils.ycp  capabilities.rb  capabilities.ycp  config_complain.rb  config_complain.ycp  helps.rb  helps.ycp  profile_dialogs.rb  profile_dialogs.ycp  report_helptext.rb  report_helptext.ycp  reporting_archived_dialogs.rb  reporting_archived_dialogs.ycp  reporting_dialogues.rb  reporting_dialogues.ycp  reporting_utils.rb  reporting_utils.ycp
src/include/apparmor-reports/: complex.ycp  dialogs.ycp  helps.ycp  wizards.ycp
src/include/subdomain/: Makefile.am  apparmor_packages.ycp  apparmor_profile_check.ycp  apparmor_ycp_utils.ycp  capabilities.ycp  config_complain.ycp  helps.ycp  profile_dialogs.ycp  report_helptext.ycp  reporting_archived_dialogs.ycp  reporting_dialogues.ycp  reporting_utils.ycp  sd-config.ycp
src/lib/apparmor/: apparmor_ui_dialog.rb  genprof.rb  logprof.rb  profiles.rb  settings.rb
src/locale/: Makefile  de_DE.po  es_ES.po  fr_FR.po  hu_HU.po  ja_JP.po
src/modules/: AppArmorDialogs.rb  AppArmorDialogs.ycp  AppArmorReports.ycp  Makefile.am
src/perl/: Makefile.am  Notify.pm  Ycp.pm
src/po/: Makefile  en_US.po  es_ES.po  fr_FR.po  hu_HU.po  it_IT.po  ja_JP.po  nb_NO.po  pt_BR.po  pt_PT.po  zh_CN.po
src/scrconf/: Makefile.am  aaconf.scr  apparmor.scr  apparmor_profiles.scr  logprof.scr  reports_confined.scr  reports_new.scr  sdconf.scr
src/servers_non_y2/: README-symlinks  ag_aa_config  ag_aa_config.pm  ag_apparmor  ag_apparmor.pm  ag_apparmor_profiles  ag_complain  ag_complain.pm  ag_genprof  ag_logprof  ag_logprof.pm  ag_reports_confined.pm  ag_reports_ess  ag_reports_parse  ag_reports_parse.pm  ag_reports_sched
yast2-apparmor-2.1/: Makefile  yast2-apparmor.spec  yast2-apparmor.spec.in
yast2-apparmor-2.1/common/: Make-po.rules  Make.rules
yast2-apparmor-2.1/src/agents/: ag_complain  ag_genprof  ag_logparse  ag_logprof  ag_reports_confined  ag_reports_ess  ag_reports_parse  ag_reports_sched  ag_sd_config  ag_subdomain  ag_subdomain_profiles
yast2-apparmor-2.1/src/apparmor/: reports.conf
yast2-apparmor-2.1/src/clients/: GenProf.ycp  LogProf.ycp  SD_AddProfile.ycp  SD_DeleteProfile.ycp  subdomain.ycp
yast2-apparmor-2.1/src/desktop/: SD_add_profile.desktop  SD_edit_profile.desktop  SD_genprof.desktop  SD_logprof.desktop
(+26 files in other folders)
