SUBDIRS = groups

desktop_DATA = \
	SD_add_profile.desktop \
	SD_delete_profile.desktop \
	SD_genprof.desktop \
	SD_Reports.desktop \
	SD_control_panel.desktop \
	SD_edit_profile.desktop \
	SD_logprof.desktop


rncdir =  $(schemadir)/autoyast/rnc
rnc_DATA =

EXTRA_DIST = $(desktop_DATA) $(rnc_DATA)
