yncludedir = @yncludedir@/apparmor

ynclude_DATA =                  \
	apparmor_packages.ycp \
	apparmor_profile_check.ycp \
	apparmor_ycp_utils.ycp \
	capabilities.ycp \
	config_complain.ycp \
	helps.ycp \
	profile_dialogs.ycp \
	report_helptext.ycp \
	reporting_archived_dialogs.ycp \
	reporting_dialogues.ycp \
	reporting_utils.ycp \
	aa-config.ycp

EXTRA_DIST =                    \
        $(ynclude_DATA)

